Update cron job config & swagger doc
